Fixed sidebar navigation icon/text spacing

--- a/src/app/partial-sidebar-navigation/partial-sidebar-navigation.component.scss
+++ b/src/app/partial-sidebar-navigation/partial-sidebar-navigation.component.scss
@@ -27,5 +27,9 @@
       background-color: rgba(69, 167, 238, 0.1);
     }
 
+    .mat-icon {
+      margin-right: 12px;
+    }
+
   }
 }
